unpackaged/main/default/objects/Score__c/validationRules/Marks_Not_Greater_Than_100.validationRule-meta.xml
<ValidationRule>
    <fullName>Marks_Not_Greater_Than_100</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(Marks__c &lt; 100)</errorConditionFormula>
    <errorDisplayField>Marks__c</errorDisplayField>
    <errorMessage>Marks Should be less than 100</errorMessage>
</ValidationRule>